pamc/src/tests/sample_code/should_fail/type_check/duplicate_match_case.ph
type U {
    .U: U,
}

let foo = match U.U {
    .U => U.U,
    .U => U.U,
};
